bug fix, optimization and new features
fix error with organization page and update style for coming soon to prevent overlap

--- a/component/shared/comingSoon/styles.module.scss
+++ b/component/shared/comingSoon/styles.module.scss
@@ -9,6 +9,7 @@
   background-image: url("/images/layout/background.jpg");
   background-size: 100% 100%;
   height: 100%;
+  margin-top: 5px;
   background-repeat: no-repeat;
   position: relative;
   &::before {
